improved selected live search result style, set z-index of live search results to be higher than social pane (fixes issue 4)

--- a/static-files/styles/vlourenco/main.css
+++ b/static-files/styles/vlourenco/main.css
@@ -182,6 +182,7 @@ form input, form textarea {
     position: absolute;
     display: none;
     width: 175px;
+    z-index: 1;
 }
 
 #live_search ul li {
@@ -197,8 +198,8 @@ form input, form textarea {
 }
 
 #live_search .live_search_result_selected {
+    border-bottom: 1px dotted;
     color: #B62F2F !important;
-    text-decoration: underline;
 }
 
 
